# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-01-31 20:26:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-33

    Summary:
      Object Access Works
    Revision:
      missingexts--head--0.7--patch-33


    modified files:
     ChangeLog Python/Interpreter.hsc Python/Objects.hs
     Python/Utils.hs testsrc/Objectstest.hs


2005-01-31 19:12:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-32

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-32


    modified files:
     ChangeLog Python/Interpreter.hsc Python/Utils.hs
     testsrc/Interpretertest.hs testsrc/Objectstest.hs


2005-01-31 18:33:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-31

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-31


    modified files:
     ChangeLog Python/Utils.hs testsrc/Interpretertest.hs


2005-01-31 18:22:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-30

    Summary:
      callByName done, tests pass
    Revision:
      missingexts--head--0.7--patch-30


    modified files:
     ChangeLog Python/Interpreter.hsc Python/Objects.hs
     testsrc/Interpretertest.hs


2005-01-31 18:11:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-29

    Summary:
      Removed debugging code
    Revision:
      missingexts--head--0.7--patch-29


    modified files:
     ChangeLog Python/Objects.hs testsrc/Objectstest.hs


2005-01-31 18:10:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-28

    Summary:
      All tests now run
    Revision:
      missingexts--head--0.7--patch-28


    modified files:
     ChangeLog Python/Objects.hs testsrc/Objectstest.hs


2005-01-31 17:48:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-27

    Summary:
      Checkpointing... call still has issues
    Revision:
      missingexts--head--0.7--patch-27


    modified files:
     ChangeLog testsrc/Objectstest.hs

